Add static analysis